# stbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-build-deploy.sh
.github/workflows/: publish-ghcr.yaml
src/: main.rs  message_parser.rs
